--- a/Chris.html
+++ b/Chris.html
@@ -176,12 +176,7 @@
                 const tasksRef = ref(db, 'tasks/');
                 onValue(tasksRef, (snapshot) => {
                     const data = snapshot.val();
-                    if (data) {
-                        tasks = Object.entries(data);
-                    } else {
-                        tasks = [];
-                    }
-                    console.log("Tasks loaded from Firebase:", tasks);
+                    tasks = data ? Object.entries(data) : [];
                     updateTable(tasks);
                 });
             }
@@ -192,7 +187,6 @@
                 const newTaskRef = push(tasksRef);
                 set(newTaskRef, task).then(() => {
                     console.log("Task saved to Firebase:", task);
-                    loadTasks(); // Reload tasks after saving
                 }).catch((error) => {
                     console.error("Error saving task to Firebase:", error);
                 });
@@ -203,7 +197,6 @@
                 const taskRef = ref(db, `tasks/${taskId}`);
                 update(taskRef, task).then(() => {
                     console.log("Task updated in Firebase:", task);
-                    loadTasks(); // Reload tasks after updating
                 }).catch((error) => {
                     console.error("Error updating task in Firebase:", error);
                 });
@@ -214,7 +207,6 @@
                 const taskRef = ref(db, `tasks/${taskId}`);
                 remove(taskRef).then(() => {
                     console.log("Task removed from Firebase:", taskId);
-                    loadTasks(); // Reload tasks after deleting
                 }).catch((error) => {
                     console.error("Error removing task from Firebase:", error);
                 });
@@ -318,6 +310,30 @@
             // Initial load of tasks from Firebase
             loadTasks();
         });
+    </script>
+    <!-- New Firebase SDK -->
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyAADq3tI5EzMWP8eB69MgyYbcsW_Akcqc4",
+            authDomain: "chishela-4d6fa.firebaseapp.com",
+            projectId: "chishela-4d6fa",
+            storageBucket: "chishela-4d6fa.firebasestorage.app",
+            messagingSenderId: "717715004324",
+            appId: "1:717715004324:web:ff821ff48227c4e1d97f31",
+            measurementId: "G-6513W7DMJ0"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
     </script>
 </head>
 
