--- a/Chris.html
+++ b/Chris.html
@@ -141,18 +141,20 @@
     </style>
     <!-- Add Firebase SDK -->
     <script type="module">
+        // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
         import { getDatabase, ref, push, set, onValue, update, remove } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-database.js";
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyCFGX-J09YjbCe_u58yexo7EgVqWwPje0",
-            authDomain: "project-management-a1c5e.firebaseapp.com",
-            databaseURL: "https://project-management-a1c5e-default-rtdb.firebaseio.com/",
-            projectId: "project-management-a1c5e",
-            storageBucket: "project-management-a1c5e.appspot.com",
-            messagingSenderId: "662718236281",
-            appId: "1:662718236281:web:e859b39671aefa67e436a8",
+            apiKey: "AIzaSyAADq3tI5EzMWP8eB69MgyYbcsW_Akcqc4",
+            authDomain: "chishela-4d6fa.firebaseapp.com",
+            databaseURL: "https://chishela-4d6fa-default-rtdb.firebaseio.com/",
+            projectId: "chishela-4d6fa",
+            storageBucket: "chishela-4d6fa.firebasestorage.app",
+            messagingSenderId: "717715004324",
+            appId: "1:717715004324:web:ff821ff48227c4e1d97f31",
+            measurementId: "G-6513W7DMJ0"
         };
 
         // Initialize Firebase
