--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -183,14 +183,14 @@
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyAADq3tI5EzMWP8eB69MgyYbcsW_Akcqc4",
-            authDomain: "chishela-4d6fa.firebaseapp.com",
-            projectId: "chishela-4d6fa",
-            storageBucket: "chishela-4d6fa.firebasestorage.app",
-            messagingSenderId: "717715004324",
-            appId: "1:717715004324:web:ff821ff48227c4e1d97f31",
-            measurementId: "G-6513W7DMJ0",
-            databaseURL: "https://chishela-4d6fa-default-rtdb.firebaseio.com/"
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_AUTH_DOMAIN",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_STORAGE_BUCKET",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID",
+            measurementId: "YOUR_MEASUREMENT_ID",
+            databaseURL: "YOUR_DATABASE_URL"
         };
 
         // Initialize Firebase
@@ -546,14 +546,15 @@
 
                 <label for="priority">Priority:</label>
                 <select id="priority">
-                    <option value="High">High</option>
-                    <option value="Medium">Medium</option>
-                    <option value="Low">Low</option>
-                </select><br><br>
+                  <option value="High">High</option>
+                <option value="Medium">Medium</option>
+                <option value="Low">Low</option>
+            </select><br><br>
 
-                <button type="submit">Save Task</button>
-            </form>
-        </div>
+            <button type="submit">Save Task</button>
+        </form>
     </div>
+</div>
+
 </body>
 </html>
