--- a/Tasksheet.html
+++ b/Tasksheet.html
@@ -5,176 +5,176 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Sheet</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-        }
+   
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f9;
+        margin: 0;
+        padding: 0;
+    }
 
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    header {
+        background-color: #4CAF50;
+        color: white;
+        text-align: center;
+        padding: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        .button-container {
-            margin: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
+    .button-container {
+        margin: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 
-        .button-container button,
-        .button-container select {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+    .button-container button,
+    .button-container select {
+        padding: 10px 20px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 
-        .button-container button:hover,
-        .button-container select:hover {
-            background-color: #45a049;
-        }
+    .button-container button:hover,
+    .button-container select:hover {
+        background-color: #45a049;
+    }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px auto;
-            overflow-x: auto;
-        }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 20px auto;
+        overflow-x: auto;
+    }
 
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
+    th, td {
+        padding: 10px;
+        border: 1px solid #ddd;
+        text-align: left;
+    }
 
-        th {
-            background-color: #4CAF50;
-            color: white;
-            position: sticky;
-            top: 0;
-            z-index: 1;
-        }
+    th {
+        background-color: #4CAF50;
+        color: white;
+        position: sticky;
+        top: 0;
+        z-index: 1;
+    }
 
-        th, td {
-            min-width: 120px;
-        }
+    th, td {
+        min-width: 120px;
+    }
 
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
 
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
 
-        .modal-content {
-            background-color: white;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 90%;
-            max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    .modal-content {
+        background-color: white;
+        margin: 5% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 90%;
+        max-width: 600px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-        .close {
-            color: #aaa;
-            font-size: 28px;
-            font-weight: bold;
-            float: right;
-            cursor: pointer;
-        }
+    .close {
+        color: #aaa;
+        font-size: 28px;
+        font-weight: bold;
+        float: right;
+        cursor: pointer;
+    }
 
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #4CAF50;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #4CAF50;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
 
-        .dropdown-content button {
-            color: white;
-            padding: 12px 16px;
-            text-align: left;
-            background-color: #4CAF50;
-            border: none;
-            width: 100%;
-            cursor: pointer;
-        }
+    .dropdown-content button {
+        color: white;
+        padding: 12px 16px;
+        text-align: left;
+        background-color: #4CAF50;
+        border: none;
+        width: 100%;
+        cursor: pointer;
+    }
 
-        .dropdown-content button:hover {
-            background-color: #45a049;
-        }
+    .dropdown-content button:hover {
+        background-color: #45a049;
+    }
 
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
 
-        .dropdown button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-        }
+    .dropdown button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+    }
 
-        .dropdown button:hover {
-            background-color: #090b09;
-        }
+    .dropdown button:hover {
+        background-color: #090b09;
+    }
 
-        input[type="text"], select {
-            padding: 10px;
-            width: 100%;
-            margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
+    input[type="text"], select {
+        padding: 10px;
+        width: 100%;
+        margin-bottom: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-sizing: border-box;
+    }
 
-        button[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
+    button[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
 
-        button[type="submit"]:hover {
-            background-color: #45a049;
-        }
-    </style>
+    button[type="submit"]:hover {
+        background-color: #45a049;
+    }
     <!-- Add Firebase SDK -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
@@ -254,10 +254,10 @@
             const tasksRef = ref(db, 'tasks/');
             const newTaskRef = push(tasksRef);
             set(newTaskRef, task).then(() => {
-                console.log("Task saved to Firebase:", task); // Debugging
+                console.log("Task saved to Firebase:", task);
                 loadTasks(); // Reload tasks after saving
             }).catch((error) => {
-                console.error("Error saving task to Firebase:", error); // Debugging
+                console.error("Error saving task to Firebase:", error);
             });
         }
 
@@ -265,14 +265,14 @@
         function updateTask(task, taskKey) {
             const taskRef = ref(db, `tasks/${taskKey}`);
             update(taskRef, task).then(() => {
-                console.log("Task updated in Firebase:", task); // Debugging
+                console.log("Task updated in Firebase:", task);
                 if (task.status === 'Completed') {
                     moveToCompletedTasks(task, taskKey);
                 } else {
                     loadTasks(); // Reload tasks after updating
                 }
             }).catch((error) => {
-                console.error("Error updating task in Firebase:", error); // Debugging
+                console.error("Error updating task in Firebase:", error);
             });
         }
 
@@ -288,20 +288,20 @@
             const completedTasksRef = ref(db, 'completedtasks/');
             const newTaskRef = push(completedTasksRef);
             set(newTaskRef, task).then(() => {
-                console.log("Task moved to completed tasks:", task); // Debugging
+                console.log("Task moved to completed tasks:", task);
                 const taskRef = ref(db, `tasks/${taskKey}`);
                 remove(taskRef).then(() => {
-                    console.log("Task removed from tasks:", task); // Debugging
+                    console.log("Task removed from tasks:", task);
                     loadTasks(); // Reload tasks after moving
                 }).catch((error) => {
-                    console.error("Error removing task from tasks:", error); // Debugging
+                    console.error("Error removing task from tasks:", error);
                 });
             }).catch((error) => {
-                console.error("Error moving task to completed tasks:", error); // Debugging
+                console.error("Error moving task to completed tasks:", error);
             });
         }
 
-        // Debounce function to limit the rate at which a function can fire.
+        // Debounce function to limit the rate at which a function can fire
         function debounce(func, delay) {
             let debounceTimer;
             return function() {
@@ -538,7 +538,9 @@
             <h2>Add Task</h2>
             <form id="taskForm">
                 <label for="projectName">Project Name:</label>
-                <select id="projectName" required></select><br><br><label for="taskDescription">Task Description:</label>
+                <select id="projectName" required></select><br><br>
+
+                <label for="taskDescription">Task Description:</label>
                 <input type="text" id="taskDescription" required><br><br>
 
                 <label for="location">Location:</label>
@@ -546,15 +548,15 @@
 
                 <label for="priority">Priority:</label>
                 <select id="priority">
-                  <option value="High">High</option>
-                <option value="Medium">Medium</option>
-                <option value="Low">Low</option>
-            </select><br><br>
+                    <option value="High">High</option>
+                    <option value="Medium">Medium</option>
+                    <option value="Low">Low</option>
+                </select><br><br>
 
-            <button type="submit">Save Task</button>
-        </form>
+                <button type="submit">Save Task</button>
+            </form>
+        </div>
     </div>
-</div>
-
 </body>
+
 </html>
